Render a small grey square using Processing.js

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
+    <script src="./processing.js"></script>
   </head>
   <body>
-
+    <canvas id="canvas"></canvas>
     <script src="./index.js"></script>
   </body>
 </html>
